--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -21,30 +21,20 @@
     <route default>
       <!-- <application name="@single-spa/welcome"></application> -->
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="/dev2">Dev2</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/dev3">Dev3</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/dev4">Dev4</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/dev5">Dev5</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav>
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/dev2">Dev2</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/dev3">Dev3</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/dev4">Dev4</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/dev5">Dev5</a>
+        </li>
+      </ul>
 
       <!-- <ul>
         <li>
