--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -21,7 +21,7 @@
     <route default>
       <!-- <application name="@single-spa/welcome"></application> -->
 
-      <ul class="nav">
+      <!-- <ul class="nav">
         <li class="nav-item">
           <a class="nav-link" href="/dev2">Dev2</a>
         </li>
@@ -34,7 +34,24 @@
         <li class="nav-item">
           <a class="nav-link" href="/dev5">Dev5</a>
         </li>
-      </ul>
+      </ul> -->
+
+      <div class="sidebar">
+        <ul>
+          <li>
+            <a href="/dev2">Administracion</a>
+          </li>
+          <li>
+            <a href="/dev3">Clientes</a>
+          </li>
+          <li>
+            <a href="/dev5">Dueños</a>
+          </li>
+          <li class="bottom">
+            <a href="/dev4">Autenticacion</a>
+          </li>
+        </ul>
+      </div>
 
       <!-- <ul>
         <li>
