--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -17,6 +17,25 @@
 
   -->
 
+  <div class="sidebar">
+    <ul>
+      <li>
+        <a href="/dev2">Administracion</a>
+      </li>
+      <li>
+        <a href="/dev3">Clientes</a>
+      </li>
+      <li>
+        <a href="/dev5">Dueños</a>
+      </li>
+      <li class="bottom">
+        <a href="/dev4">Autenticacion</a>
+      </li>
+    </ul>
+  </div>
+
+  <redirect from="/" to="/dev4"></redirect>
+
   <main>
     <route default>
       <!-- <application name="@single-spa/welcome"></application> -->
@@ -35,23 +54,6 @@
           <a class="nav-link" href="/dev5">Dev5</a>
         </li>
       </ul> -->
-
-      <div class="sidebar">
-        <ul>
-          <li>
-            <a href="/dev2">Administracion</a>
-          </li>
-          <li>
-            <a href="/dev3">Clientes</a>
-          </li>
-          <li>
-            <a href="/dev5">Dueños</a>
-          </li>
-          <li class="bottom">
-            <a href="/dev4">Autenticacion</a>
-          </li>
-        </ul>
-      </div>
 
       <!-- <ul>
         <li>
